# paper-audit-system

./: .editorconfig  .env.example  .gitignore  .ruff.toml  README.md  engine-java_http_json_migration_plan.md  main.py  pyproject.toml
.github/workflows/: ci.yml
engine-java/: .gitignore  README.md  pom.xml  start.bat  start.sh  对接操作手册.md  需求清单.md
engine-java/src/main/protobuf/: auditor.proto
engine-java/src/main/resources/: application-docker.properties  application-local.properties  logback-spring.xml  (+1 more)
python_service/: __init__.py
python_service/paper_audit/: __init__.py  app.py  config.py  main.py  startup.py
python_service/paper_audit/api/: __init__.py  admin.py  audit.py  audit_common.py  audit_rendering.py  audit_worker.py  download.py  tasks.py
python_service/paper_audit/core/: __init__.py  langgraph.py  rust_client.py  task_queue.py
python_service/paper_audit/schemas/: __init__.py
python_service/paper_audit/services/: __init__.py  artifacts.py  reporting.py
rust_engine/: Cargo.toml
rust_engine/src/: annotator.rs  lib.rs  main.rs  parser.rs
rust_engine/src/parser/: api.rs  document.rs  format.rs  mod.rs  sections.rs  types.rs  xml.rs
rust_engine/src/parser/sections/: handlers.rs  references.rs
rust_engine/temp/rust_engine/rust_parse/: doc_parsed.json
rust_engine/tests/: annotator_package.rs  integration_tests.rs
temp/: analyze_parse.ps1  full_doc_review.py  full_doc_review_incremental.py  monitor_task40.py  resume_test.py
tests/: test_api.py  test_main_startup.py  test_rules_engine.py  test_task_queue.py  test_workflow_positions.py
(+73 files in other folders)
