[package]
name = "paper-audit-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "1.9"
quick-xml = "0.38"
zip = "2.1"

[dev-dependencies]
tempfile = "3.5"
tower = { version = "0.5", features = ["util"] }
